--- a/index.html
+++ b/index.html
@@ -46,6 +46,82 @@
                 </ul>
 
             </address>
+            <button class="burger-btn" type="button" data-menu-open><svg class="burger-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-burger">
+                </svg></button>
+        </div>
+        <div class="mobile-menu is-open" data-menu>
+            <div class="container mobile-menu-container">
+                <button class="mobile-menu-close" data-menu-close>
+                    <svg class="icon-close" width="8" height="8">
+                        <use href="./images/icons.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <nav class="mobile-menu-nav">
+                    <div class="nav-wrapper">
+                        <ul class="mobile-menu-nav-list">
+                            <li class="mobile-menu-nav-item">
+                                <a class="mobile-menu-nav-link studio-menu-nav-link" href="./index.html">Studio</a>
+                            </li>
+                            <li class="mobile-menu-nav-item">
+                                <a class="mobile-menu-nav-link" href="">Portfolio</a>
+                            </li>
+                            <li class="mobile-menu-nav-item">
+                                <a class="mobile-menu-nav-link" href="">Contacts</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <address class="mobile-menu-address">
+                    <div class="address-wrapper">
+                        <ul class="mobile-menu-address-list">
+                            <li class="mobile-menu-address-item">
+                                <a class="mobile-menu-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+
+                            </li>
+                            <li class="mobile-menu-address-link">
+                                <a class="mobile-menu-address-link"
+                                    href="mailto:info@devstudio.com">info@devstudio.com></a>
+                            </li>
+                        </ul>
+                    </div>
+                </address>
+                <div class="mobile-social-container">
+                    <ul class="mobile-social-list">
+                        <li class="mobile-social-item">
+                            <a class="mobile-social-link" href="www.instargam.com">
+                                <svg class="icon-social" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mobile-social-item">
+                            <a class="mobile-social-link" href="www.twitter.com">
+                                <svg class="icon-social" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mobile-social-item">
+                            <a class="mobile-social-link" href="www.facebook.com">
+                                <svg class="icon-social" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mobile-social-item">
+                            <a class="mobile-social-link" href="www.linkedin.com">
+                                <svg class="icon-social" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+
+
+
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -335,44 +411,47 @@
     </main>
     <footer class="footer">
         <div class="container footer-wrapper">
-            <div class="footer-container">
-                <a class="logo footer-logo" href="./index.html">Web<span class="another-color">Studio</span></a>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
-                    &
-                    growth solutions.</p>
-            </div>
-            <div class="footer-social-container">
-                <p class="footer-social-media-text">Social media</p>
-                <ul class="footer-social-list">
-                    <li class="social-item footer-social-item">
-                        <a class="social-link footer-social-link" href="www.instargam.com">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item footer-social-item">
-                        <a class="social-link footer-social-link" href="www.twitter.com">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item footer-social-item">
-                        <a class="social-link footer-social-link" href="www.facebook.com">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item footer-social-item">
-                        <a class="social-link footer-social-link" href="www.linkedin.com">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="footer-tab-wrapper">
+                <div class="footer-container">
+                    <a class="logo footer-logo" href="./index.html">Web<span class="another-color">Studio</span></a>
+                    <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                        marketing
+                        &
+                        growth solutions.</p>
+                </div>
+                <div class="footer-social-container">
+                    <p class="footer-social-media-text">Social media</p>
+                    <ul class="footer-social-list">
+                        <li class="social-item footer-social-item">
+                            <a class="social-link footer-social-link" href="www.instargam.com">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="social-link footer-social-link" href="www.twitter.com">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="social-link footer-social-link" href="www.facebook.com">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item footer-social-item">
+                            <a class="social-link footer-social-link" href="www.linkedin.com">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-subscribe-container">
                 <p class="footer-subscribe-text">Subscribe</p>
@@ -392,7 +471,7 @@
         </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop hidden" data-modal>
         <div class="modal">
             <button class="modal-close-button" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
@@ -451,7 +530,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
-
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
