--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
                 <h2 class="team-heading">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img src="./images/img1.jpg" alt="product designer" width="264" height="260">
+                        <img srcset="./images/img1.jpg 1x, 
+                        ./images/img1@2x.jpg 2x" src="./images/img1.jpg" alt="product designer" width="264"
+                            height="260">
                         <div class="person-container">
                             <h3 class="team-subheading">Mark Guerrero</h3>
                             <p class="team-list-para">Product Designer</p>
@@ -226,7 +228,9 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img2.jpg" alt="frontend developer" width="264" height="260">
+                        <img srcset="./images/img2.jpg 1x, 
+                        ./images/img2@2x.jpg 2x" src="./images/img2.jpg" alt="frontend developer" width="264"
+                            height="260">
                         <div class="person-container">
                             <h3 class="team-subheading">Tom Ford</h3>
                             <p class="team-list-para">Frontend Developer</p>
@@ -259,7 +263,9 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img3.jpg" alt="marketing manager" width="264" height="260">
+                        <img srcset="./images/img3.jpg 1x, 
+                        ./images/img3@2x.jpg 2x" src="./images/img3.jpg" alt="marketing manager" width="264"
+                            height="260">
                         <div class="person-container">
                             <h3 class="team-subheading">Camila Garcia</h3>
                             <p class="team-list-para">Marketing</p>
@@ -292,7 +298,8 @@
                         </div>
                     </li>
                     <li class="team-item">
-                        <img src="./images/img4.jpg" alt="designer" width="264" height="260">
+                        <img srcset="./images/img4.jpg 1x, 
+                        ./images/img4@2x.jpg 2x" src="./images/img4.jpg" alt="designer" width="264" height="260">
                         <div class="person-container">
                             <h3 class="team-subheading">Daniel Wilson</h3>
                             <p class="team-list-para">UI Designer</p>
@@ -333,7 +340,9 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/banking.jpg" alt="Bank app photo" width="360" height="300">
+                            <img srcset="./images/banking.jpg 1x, 
+                        ./images/banking@2x.jpg 2x" src="./images/banking.jpg" alt="Bank app photo" width="360"
+                                height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App ·
@@ -346,7 +355,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/payment.jpg" alt="Cashless payment photo" width="360" height="300">
+                            <img srcset="./images/payment.jpg 1x, 
+                        ./images/payment@2x.jpg 2x" src="./images/payment.jpg" alt="Cashless payment photo" width="360"
+                                height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -358,7 +369,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/meditation.jpg" alt="Meditation app photo" width="360" height="300">
+                            <img srcset="./images/meditation.jpg 1x, 
+                        ./images/meditation@2x.jpg 2x" src="./images/meditation.jpg" alt="Meditation app photo"
+                                width="360" height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -370,7 +383,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/taxi.jpg" alt="Taxi service photo" width="360" height="300">
+                            <img srcset="./images/taxi.jpg 1x, 
+                        ./images/taxi@2x.jpg 2x" src="./images/taxi.jpg" alt="Taxi service photo" width="360"
+                                height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -382,8 +397,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/illustrations.jpg" alt="Screen Illustrations photo" width="360"
-                                height="300">
+                            <img srcset="./images/illustrations.jpg 1x, 
+                        ./images/illustrations@2x.jpg 2x" src="./images/illustrations.jpg"
+                                alt="Screen Illustrations photo" width="360" height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -395,7 +411,9 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img src="./images/courses.jpg" alt="Online Courses photo" width="360" height="300">
+                            <img srcset="./images/courses.jpg 1x, 
+                        ./images/courses@2x.jpg 2x" src="./images/courses.jpg" alt="Online Courses photo" width="360"
+                                height="300">
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -411,56 +429,54 @@
     </main>
     <footer class="footer">
         <div class="container footer-wrapper">
-            <div class="footer-tab-wrapper">
-                <div class="footer-container">
-                    <a class="logo footer-logo" href="./index.html">Web<span class="another-color">Studio</span></a>
-                    <p class="footer-text">Increase the flow of customers and sales for your business with digital
-                        marketing
-                        &
-                        growth solutions.</p>
-                </div>
-                <div class="footer-social-container">
-                    <p class="footer-social-media-text">Social media</p>
-                    <ul class="footer-social-list">
-                        <li class="social-item footer-social-item">
-                            <a class="social-link footer-social-link" href="www.instargam.com">
-                                <svg class="icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-item footer-social-item">
-                            <a class="social-link footer-social-link" href="www.twitter.com">
-                                <svg class="icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-item footer-social-item">
-                            <a class="social-link footer-social-link" href="www.facebook.com">
-                                <svg class="icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-item footer-social-item">
-                            <a class="social-link footer-social-link" href="www.linkedin.com">
-                                <svg class="icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
+            <div class="footer-container">
+                <a class="logo footer-logo" href="./index.html">Web<span class="another-color">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    &
+                    growth solutions.</p>
             </div>
+            <div class="footer-social-container">
+                <p class="footer-social-media-text">Social media</p>
+                <ul class="footer-social-list">
+                    <li class="social-item footer-social-item">
+                        <a class="social-link footer-social-link" href="www.instargam.com">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item footer-social-item">
+                        <a class="social-link footer-social-link" href="www.twitter.com">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item footer-social-item">
+                        <a class="social-link footer-social-link" href="www.facebook.com">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item footer-social-item">
+                        <a class="social-link footer-social-link" href="www.linkedin.com">
+                            <svg class="icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
             <div class="footer-subscribe-container">
                 <p class="footer-subscribe-text">Subscribe</p>
                 <form class="footer-form">
                     <label class="footer-form-label" for="user-subscription-email"><input class="footer-form-input"
                             type="email" id="user-subscription-email" name="email" placeholder="E-mail" />
                     </label>
-
-
                     <button class="footer-subscribe-button" type="submit">Subscribe<svg class="footer-subscribe-icon"
                             width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
@@ -471,7 +487,7 @@
         </div>
     </footer>
 
-    <div class="backdrop hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button class="modal-close-button" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
@@ -521,8 +537,8 @@
                     <label class="checkbox-label" for="user-privacy"><span class="input-span-check"><svg
                                 class="input-icon-check-svg" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
-                            </svg></span> I accept the terms and conditions of the&nbsp;
-                        <a class="checkbox-link" href="#">Privacy Policy</a>
+                            </svg></span><span> I accept the terms and conditions of the&nbsp;
+                            <a class="checkbox-link" href="#">Privacy Policy</a></span>
                     </label>
                 </div>
                 <button class=" form-button" type="submit">Send</button>
