--- a/index.html
+++ b/index.html
@@ -340,9 +340,16 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/banking.jpg 1x, 
-                        ./images/banking@2x.jpg 2x" src="./images/banking.jpg" alt="Bank app photo" width="360"
-                                height="300">
+                            <picture>
+                                <source srcset="./images/banking-desk.jpg 1x,
+                        ./images/banking-desk@2x.jpg 2x
+                      " media="(min-width: 1158px)" />
+                                <source srcset="./images/banking-tab.jpg 1x,
+                        ./images/banking-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/banking-mob.jpg 1x,
+                        ./images/banking-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/banking-mob.jpg" alt="Bank app photo" width="360" height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App ·
@@ -355,9 +362,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/payment.jpg 1x, 
-                        ./images/payment@2x.jpg 2x" src="./images/payment.jpg" alt="Cashless payment photo" width="360"
-                                height="300">
+                            <picture>
+                                <source srcset="./images/payment-desk.jpg 1x,
+                                                    ./images/payment-desk@2x.jpg 2x
+                                                  " media="(min-width: 1158px)" />
+                                <source srcset="./images/payment-tab.jpg 1x,
+                                                    ./images/payment-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/payment-mob.jpg 1x,
+                                                    ./images/payment-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/payment-mob.jpg" alt="payment app photo" width="360" height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -369,9 +383,17 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/meditation.jpg 1x, 
-                        ./images/meditation@2x.jpg 2x" src="./images/meditation.jpg" alt="Meditation app photo"
-                                width="360" height="300">
+                            <picture>
+                                <source srcset="./images/meditation-desk.jpg 1x,
+                                                    ./images/meditation-desk@2x.jpg 2x
+                                                  " media="(min-width: 1158px)" />
+                                <source srcset="./images/meditation-tab.jpg 1x,
+                                                    ./images/meditation-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/meditation-mob.jpg 1x,
+                                                    ./images/meditation-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/meditation-mob.jpg" alt="meditation app photo" width="360"
+                                    height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -383,9 +405,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/taxi.jpg 1x, 
-                        ./images/taxi@2x.jpg 2x" src="./images/taxi.jpg" alt="Taxi service photo" width="360"
-                                height="300">
+                            <picture>
+                                <source srcset="./images/taxi-desk.jpg 1x,
+                                                    ./images/taxi-desk@2x.jpg 2x
+                                                  " media="(min-width: 1158px)" />
+                                <source srcset="./images/taxi-tab.jpg 1x,
+                                                    ./images/taxi-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/taxi-mob.jpg 1x,
+                                                    ./images/taxi-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/taxi-mob.jpg" alt="taxi app photo" width="360" height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -397,9 +426,17 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/illustrations.jpg 1x, 
-                        ./images/illustrations@2x.jpg 2x" src="./images/illustrations.jpg"
-                                alt="Screen Illustrations photo" width="360" height="300">
+                            <picture>
+                                <source srcset="./images/illustrations-desk.jpg 1x,
+                                                    ./images/illustrations-desk@2x.jpg 2x
+                                                  " media="(min-width: 1158px)" />
+                                <source srcset="./images/illustrations-tab.jpg 1x,
+                                                    ./images/illustrations-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/illustrations-mob.jpg 1x,
+                                                    ./images/illustrations-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/illustrations-mob.jpg" alt="illustrations app photo" width="360"
+                                    height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
@@ -411,9 +448,16 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-item-box">
-                            <img srcset="./images/courses.jpg 1x, 
-                        ./images/courses@2x.jpg 2x" src="./images/courses.jpg" alt="Online Courses photo" width="360"
-                                height="300">
+                            <picture>
+                                <source srcset="./images/courses-desk.jpg 1x,
+                                                    ./images/courses-desk@2x.jpg 2x
+                                                  " media="(min-width: 1158px)" />
+                                <source srcset="./images/courses-tab.jpg 1x,
+                                                    ./images/courses-tab@2x.jpg 2x" media="(min-width: 768px)" />
+                                <source srcset="./images/courses-mob.jpg 1x,
+                                                    ./images/courses-mob@2x.jpg 2x" media="(max-width: 767px)" />
+                                <img src="./images/courses-mob.jpg" alt="courses app photo" width="360" height="300" />
+                            </picture>
                             <p class="portfolio-item-box-text">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                                 Cloud Storage App</p>
